# C

./: .gitignore  README.md  cftisiotest.c  init.el
IC2/aula1/: ficha  guests  guests.c  hello.c  hello.c~  int  int.c  oi.cpp  old_spa.c  spa  spa.c
c-primer-plus/: CMakeLists.txt
data_structures/: bounded_int_stack.c  bounded_str_stack.c  linked_list_stack.c
exploits/: bufferoverflow  bufferoverflow.c
kr-c/new/chapter1/: LongLineTheWorldIsABeautifulPlace.txt  TheWorldIsABeautifulPlace.txt  cels_to_fahr.c  checker  checker.c  count_blank_tab_nl.c  count_digit_white_other.c  count_input_chars_1st.c  count_input_chars_2nd.c  count_lines.c  count_lines_words_chars.c  cp_io.c  detab.c  eightyCharLinesBeautifulPlace.txt  ex1-16.c  ex1-17.c  ex1-18.c  ex1-19.c  fahr_to_cels.c  file_with_EOF.txt  file_with_multiple_blanks.txt  file_with_multiple_lines.txt  file_with_removed_trailing_blanks_and_tabs.txt  file_with_tabs_backspace_backslash.txt  file_with_tabs_blanks_nl.txt  file_with_trailing_blanks_and_tabs.txt  file_with_words.txt  fold  fold.c  for_fahr_to_cels.c  hello.c  longest_input_line.c  power.c  print_eof.c  remove_multiple_blanks.c  replace_tab_backspace_backslash.c  reverse_for_fahr_to_cels.c  rmcomment  rmcomment.c  temperature_conversion.c  (+5 more)
kr-c/new/chapter2/: atoi  atoi.c  bitwise_addition  bitwise_addition.c  enum_test  enum_test.c  ex2-1  ex2-1.c  ex2-10  ex2-10.c  ex2-2  ex2-2.c  ex2-3  ex2-3.c  ex2-4  ex2-4.c  ex2-5  ex2-5.c  ex2-6  ex2-6.c  ex2-7  ex2-7.c  ex2-8a  ex2-8a.c  ex2-8b  ex2-8b.c  ex2-9  ex2-9.c  fast_rightrot  fast_rightrot.c  getbits  getbits.c  lower  lower.c  random  random.c  random_binary.txt  slow_rightrot  slow_rightrot.c  stringtools.c  (+8 more)
mastering-bitcoin/: addr  addr.cpp  alicetxid  block.txt  rpc_block.py  rpc_example.py  rpc_sumblockchaintxvalues.py  rpc_transaction.py  txid
mastering-bitcoin/aaronjaramillo/libbitcoin-first-program/: compressedKeyFirstProgram.cpp  compressed_wif  first  libbitcoinFirstProgram.cpp
mastering-bitcoin/pybitcointools/: key_to_address_ecc-example.py
sandbox/: const  const.c  hexphonenumber  hexphonenumber.c  intpointer  intpointer.c  reverseArrayInPlace.c
sandbox/heap/: heap.cpp  heap.hpp  test_heapSort  test_heapSort.cpp
