cmake_minimum_required(VERSION 3.7)
add_executable (stringf /home/andre/Development/Programming/c-primer-plus/4/stringf.c)
add_executable (flags /home/andre/Development/Programming/c-primer-plus/4/flags.c)
add_executable (praise1 /home/andre/Development/Programming/c-primer-plus/4/praise1.c)
add_executable (defines /home/andre/Development/Programming/c-primer-plus/4/defines.c)
add_executable (floats /home/andre/Development/Programming/c-primer-plus/4/floats.c)
add_executable (skip2 /home/andre/Development/Programming/c-primer-plus/4/skip2.c)
add_executable (prntval /home/andre/Development/Programming/c-primer-plus/4/prntval.c)
add_executable (pizza /home/andre/Development/Programming/c-primer-plus/4/pizza.c)
add_executable (width /home/andre/Development/Programming/c-primer-plus/4/width.c)
add_executable (longstrg /home/andre/Development/Programming/c-primer-plus/4/longstrg.c)
add_executable (praise2 /home/andre/Development/Programming/c-primer-plus/4/praise2.c)
add_executable (varwid /home/andre/Development/Programming/c-primer-plus/4/varwid.c)
add_executable (intconv /home/andre/Development/Programming/c-primer-plus/4/intconv.c)
add_executable (printout /home/andre/Development/Programming/c-primer-plus/4/printout.c)
add_executable (input /home/andre/Development/Programming/c-primer-plus/4/input.c)
add_executable (floatcnv /home/andre/Development/Programming/c-primer-plus/4/floatcnv.c)
add_executable (talkback /home/andre/Development/Programming/c-primer-plus/4/talkback.c)
add_executable (listing1-1 /home/andre/Development/Programming/c-primer-plus/1/listing1-1.c)
add_executable (listing1-2 /home/andre/Development/Programming/c-primer-plus/1/listing1-2.c)
add_executable (1_pe1 /home/andre/Development/Programming/c-primer-plus/1/1_pe1.c)
add_executable (badcount /home/andre/Development/Programming/c-primer-plus/3/badcount.c)
add_executable (pe4 /home/andre/Development/Programming/c-primer-plus/3/pe4.c)
add_executable (pe7 /home/andre/Development/Programming/c-primer-plus/3/pe7.c)
add_executable (charcode /home/andre/Development/Programming/c-primer-plus/3/charcode.c)
add_executable (specifiers /home/andre/Development/Programming/c-primer-plus/3/specifiers.c)
add_executable (rq10 /home/andre/Development/Programming/c-primer-plus/3/rq10.c)
add_executable (altnames /home/andre/Development/Programming/c-primer-plus/3/altnames.c)
add_executable (pe1 /home/andre/Development/Programming/c-primer-plus/3/pe1.c)
add_executable (pe3 /home/andre/Development/Programming/c-primer-plus/3/pe3.c)
add_executable (listing3-1 /home/andre/Development/Programming/c-primer-plus/3/listing3-1.c)
add_executable (cecedilha /home/andre/Development/Programming/c-primer-plus/3/cecedilha.c)
add_executable (escape /home/andre/Development/Programming/c-primer-plus/3/escape.c)
add_executable (typesize /home/andre/Development/Programming/c-primer-plus/3/typesize.c)
add_executable (showf_pt /home/andre/Development/Programming/c-primer-plus/3/showf_pt.c)
add_executable (print2 /home/andre/Development/Programming/c-primer-plus/3/print2.c)
add_executable (rq5 /home/andre/Development/Programming/c-primer-plus/3/rq5.c)
add_executable (pe8 /home/andre/Development/Programming/c-primer-plus/3/pe8.c)
add_executable (pe6 /home/andre/Development/Programming/c-primer-plus/3/pe6.c)
add_executable (pe2 /home/andre/Development/Programming/c-primer-plus/3/pe2.c)
add_executable (rq4 /home/andre/Development/Programming/c-primer-plus/3/rq4.c)
add_executable (rq8 /home/andre/Development/Programming/c-primer-plus/3/rq8.c)
add_executable (toobig /home/andre/Development/Programming/c-primer-plus/3/toobig.c)
add_executable (pe5 /home/andre/Development/Programming/c-primer-plus/3/pe5.c)
add_executable (var_test /home/andre/Development/Programming/c-primer-plus/3/var_test.c)
add_executable (listing3-3 /home/andre/Development/Programming/c-primer-plus/3/listing3-3.c)
add_executable (float_toobig /home/andre/Development/Programming/c-primer-plus/3/float_toobig.c)
add_executable (floaterr /home/andre/Development/Programming/c-primer-plus/3/floaterr.c)
add_executable (beep /home/andre/Development/Programming/c-primer-plus/3/beep.c)
add_executable (1_pe3 /home/andre/Development/Programming/c-primer-plus/2/1_pe3.c)
add_executable (1_pe8 /home/andre/Development/Programming/c-primer-plus/2/1_pe8.c)
add_executable (1_pe6 /home/andre/Development/Programming/c-primer-plus/2/1_pe6.c)
add_executable (1_pe5 /home/andre/Development/Programming/c-primer-plus/2/1_pe5.c)
add_executable (1_rq4 /home/andre/Development/Programming/c-primer-plus/2/1_rq4.c)
add_executable (1_rq8 /home/andre/Development/Programming/c-primer-plus/2/1_rq8.c)
add_executable (2_pe1 /home/andre/Development/Programming/c-primer-plus/2/2_pe1.c)
add_executable (rq9 /home/andre/Development/Programming/c-primer-plus/2/rq9.c)
add_executable (1_pe7 /home/andre/Development/Programming/c-primer-plus/2/1_pe7.c)
add_executable (listing2-1 /home/andre/Development/Programming/c-primer-plus/2/listing2-1.c)
add_executable (rq7 /home/andre/Development/Programming/c-primer-plus/2/rq7.c)
add_executable (1_pe4 /home/andre/Development/Programming/c-primer-plus/2/1_pe4.c)
add_executable (1_pe2 /home/andre/Development/Programming/c-primer-plus/2/1_pe2.c)
add_executable (baruch /home/andre/Development/Programming/c-primer-plus/2/baruch/baruch.c)
